// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BundleDeployer01 should complain if DFHDPLOY ends with an error 1`] = `"DFHDPLOY stopped processing due to an error."`;

exports[`BundleDeployer01 should complain if SYSTSPRT not found 1`] = `"SYSTSPRT output from DFHDPLOY not found. Most recent status update: 'Submitting DFHDPLOY JCL for the DEPLOY action'."`;

exports[`BundleDeployer01 should complain if cicshlq not found 1`] = `"Validation of --cicshlq dataset failed: Injected CICSHLQ error"`;

exports[`BundleDeployer01 should complain if cicshlq not found2 1`] = `"DFHDPLOY not found in SDFHLOAD within the --cicshlq dataset: 12345678901234567890123456789012345.SDFHLOAD"`;

exports[`BundleDeployer01 should complain if cpsmhlq not found 1`] = `"Validation of --cpsmhlq dataset failed: Injected CPSMHLQ error"`;

exports[`BundleDeployer01 should complain if cpsmhlq not found2 1`] = `"EYU9ABSI not found in SEYUAUTH within the --cpsmhlq dataset: abcde12345abcde12345abcde12345abcde.SEYUAUTH"`;

exports[`BundleDeployer01 should complain if status can't be determined 1`] = `"DFHDPLOY command completed, but status cannot be determined."`;

exports[`BundleDeployer01 should complain with missing zOSMF profile for deploy 1`] = `"Injected Create error"`;

exports[`BundleDeployer01 should complain with missing zOSMF profile for undeploy 1`] = `"Injected Create error"`;

exports[`BundleDeployer01 should complete with warnings  1`] = `"DFHDPLOY completed with warnings."`;

exports[`BundleDeployer01 should deploy successfully 1`] = `"Bundle deployment successful."`;

exports[`BundleDeployer01 should fail with overlong jobcard 1`] = `"--jobcard parameter section cannot be split into 72 character lines: '//         73CHARS=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1'."`;

exports[`BundleDeployer01 should generate deploy JCL for AVAILABLE 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
DEPLOY BUNDLE(12345678)
       BUNDLEDIR(1234567890)
       SCOPE(12345678)
       STATE(AVAILABLE)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate deploy JCL for DISABLED 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
DEPLOY BUNDLE(12345678)
       BUNDLEDIR(1234567890)
       SCOPE(12345678)
       STATE(DISABLED)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate deploy JCL for ENABLED 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
DEPLOY BUNDLE(12345678)
       BUNDLEDIR(1234567890)
       SCOPE(12345678)
       STATE(ENABLED)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate deploy JCL for csdgroup 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
DEPLOY BUNDLE(12345678)
       BUNDLEDIR(1234567890)
       SCOPE(12345678)
       STATE(ENABLED)
       CSDGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate deploy JCL for csdgroup with timeout 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
DEPLOY BUNDLE(12345678)
       BUNDLEDIR(1234567890)
       SCOPE(12345678)
       STATE(ENABLED)
       TIMEOUT(1500)
       CSDGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate deploy JCL for mixed case 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
DEPLOY BUNDLE(12345678)
       BUNDLEDIR(1234567890)
       SCOPE(12345678)
       STATE(DISABLED)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate deploy JCL for resgroup 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
DEPLOY BUNDLE(12345678)
       BUNDLEDIR(1234567890)
       SCOPE(12345678)
       STATE(ENABLED)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate deploy JCL for resgroup with timeout 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
DEPLOY BUNDLE(12345678)
       BUNDLEDIR(1234567890)
       SCOPE(12345678)
       STATE(ENABLED)
       TIMEOUT(1500)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate deploy JCL with neither csdgroup nor resgroup 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
DEPLOY BUNDLE(12345678)
       BUNDLEDIR(1234567890)
       SCOPE(12345678)
       STATE(ENABLED)
/*
"
`;

exports[`BundleDeployer01 should generate undeploy JCL for DISABLED 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
UNDEPLOY BUNDLE(12345678)
       SCOPE(12345678)
       STATE(DISABLED)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate undeploy JCL for DISCARDED 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
UNDEPLOY BUNDLE(12345678)
       SCOPE(12345678)
       STATE(DISCARDED)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate undeploy JCL for UNAVAILABLE 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
UNDEPLOY BUNDLE(12345678)
       SCOPE(12345678)
       STATE(UNAVAILABLE)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate undeploy JCL for csdgroup 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
UNDEPLOY BUNDLE(12345678)
       SCOPE(12345678)
       STATE(DISCARDED)
       CSDGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate undeploy JCL for csdgroup with timeout 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
UNDEPLOY BUNDLE(12345678)
       SCOPE(12345678)
       STATE(DISCARDED)
       TIMEOUT(1500)
       CSDGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate undeploy JCL for mixed case 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
UNDEPLOY BUNDLE(12345678)
       SCOPE(12345678)
       STATE(DISCARDED)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate undeploy JCL for resgroup 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
UNDEPLOY BUNDLE(12345678)
       SCOPE(12345678)
       STATE(DISCARDED)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate undeploy JCL for resgroup with timeout 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
UNDEPLOY BUNDLE(12345678)
       SCOPE(12345678)
       STATE(DISCARDED)
       TIMEOUT(1500)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate undeploy JCL with neither csdgroup nor resgroup 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
UNDEPLOY BUNDLE(12345678)
       SCOPE(12345678)
       STATE(DISCARDED)
/*
"
`;

exports[`BundleDeployer01 should handle failure during submitjobs processing 1`] = `"Failure occurred submitting DFHDPLOY JCL: 'Injected Submit error'. Most recent status update: 'Submitting DFHDPLOY JCL for the DEPLOY action'."`;

exports[`BundleDeployer01 should support long bundledir 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
DEPLOY BUNDLE(12345678)
       BUNDLEDIR(123456789012345678901234567890123456789012345678901234
        567890123456789012345678901234567890123456789012345678901234567
        890123456789012345678901234567890123456789012345678901234567890
        123456789012345678901234567890123456789012345678901234567890123
        456789012345)
       SCOPE(12345678)
       STATE(ENABLED)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should support long line jobcard 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT,
//         NOEL=ABCDEFGHIJKMNOPQRSTUVWXYZ
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
DEPLOY BUNDLE(12345678)
       BUNDLEDIR(1234567890)
       SCOPE(12345678)
       STATE(ENABLED)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should support multi-line jobcard 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,
//         MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
DEPLOY BUNDLE(12345678)
       BUNDLEDIR(1234567890)
       SCOPE(12345678)
       STATE(ENABLED)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should support multi-line jobcard with embedded new lines 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,
//         MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
DEPLOY BUNDLE(12345678)
       BUNDLEDIR(1234567890)
       SCOPE(12345678)
       STATE(ENABLED)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should support really long line jobcard 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT,
//         NOEL=ABCDEFGHIJKMNOPQRSTUVWXYZ,
//         72CHARS=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz,
//         ALPHABETIC=ABCDEFGHIJKLMNOPQRSTUVWXYZ
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
DEPLOY BUNDLE(12345678)
       BUNDLEDIR(1234567890)
       SCOPE(12345678)
       STATE(ENABLED)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should support verbose=false output for deploy 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
DEPLOY BUNDLE(12345678)
       BUNDLEDIR(1234567890)
       SCOPE(12345678)
       STATE(DISABLED)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should support verbose=false output for undeploy 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
UNDEPLOY BUNDLE(12345678)
       SCOPE(12345678)
       STATE(DISABLED)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should support verbose=true output for deploy 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
DEPLOY BUNDLE(12345678)
       BUNDLEDIR(1234567890)
       SCOPE(12345678)
       STATE(DISABLED)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should support verbose=true output for undeploy 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=abcde12345abcde12345abcde12345abcde.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
UNDEPLOY BUNDLE(12345678)
       SCOPE(12345678)
       STATE(DISABLED)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should tolerate empty output from DFHDPLOY 1`] = `"DFHDPLOY did not generate any output. Most recent status update: 'Submitting DFHDPLOY JCL for the DEPLOY action'."`;

exports[`BundleDeployer01 should undeploy successfully 1`] = `"Bundle undeployment successful."`;
